# smooth-arap

./: CMakeLists.txt  README.md  main.cpp
interactive/: CMakeLists.txt  main.cpp
interactive_solver/: CMakeLists.txt  ConstrainedLinearSolver.cpp  ConstrainedLinearSolver.hpp  main.cpp
non-interactive/: CMakeLists.txt  handles.txt  main.cpp
non-interactive/data/: sphere.off  spikedCylinder.off  spikedSphere.off
